--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+      with:
+        token: ${{ secrets.GITHUB_ACCESS_TOKEN }}
     - name: Fetch export from google spreadsheet
       run: |
         curl -s "https://sheets.googleapis.com/v4/spreadsheets/${{ secrets.SPREADSHEET_ID }}/values/${{ secrets.SPREADSHEET_RANGE }}?key=${{ secrets.SPREADSHEET_API_KEY }}" | jq -r ".values[][]" > OriginsWishlistExport.lua
